--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
 * Allow cacher/cc to cache individual expressions
 
-* Remote access?  Use somethign stashR like?
+* Remote access?  Use something stashR like?
