Some more goals

--- a/TODO
+++ b/TODO
@@ -1,1 +1,7 @@
 * Allow cacher/cc to cache individual expressions
+
+* Documentation!
+
+* Uploading?
+
+* Clone remote caches by using ID from archive
