--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 * Tools/framework for editing analyses and re-running them
 
 * Interface for applications other than R
+
+* Annotation: tagging, forcing evaluation
