--- a/TODO
+++ b/TODO
@@ -2,4 +2,4 @@
 
 * Interface for applications other than R
 
-* Annotation: tagging, forcing evaluation
+* Annotation: tagging, forcing evaluation, figures/tables
