--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@
 * Interface for applications other than R
 
 * Annotation: tagging, forcing evaluation, figures/tables
+
+* Internal hash function instead of relying on 'digest'
